@@ -24,9 +24,15 @@
 !LSHIFT 1 7
 !RSHIFT 6 4
 
-Alt_L 7 5 8
+# Tab = CTRL
+Tab 7 2 8
+# Shift + Tab = CTRL
+ISO_Left_Tab 7 2 8
+
+# Control_L = CBM
+Control_L 7 5 8
+
 BackSpace 0 0 8
-Control_L 7 2 8
 Delete 0 0 8
 Down 0 7 8
 Escape 7 7 8
@@ -41,7 +47,6 @@ F8 0 3 1
 Home 6 3 8
 Insert 6 0 8
 Left 0 2 1
-Meta_L 7 5 8
 Return 0 1 8
 Right 0 2 8
 Shift_L 1 7 2
